--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -72,15 +72,12 @@
       "toggleTracing": "Включение/выключение трассировки связи с отладочными адаптерами"
     },
     "editor": {
-      "diffEditor.diffAlgorithm.experimental": "Использует экспериментальный алгоритм диффинга.",
-      "diffEditor.diffAlgorithm.smart": "Использует алгоритм диффиринга по умолчанию.",
       "dirtyEncoding": "Файл загрязнен. Пожалуйста, сначала сохраните его, а затем откройте с другой кодировкой.",
       "editor.codeActionWidget.showHeaders": "Включить/выключить показ заголовков групп в меню действий кода.",
       "editor.formatOnSaveMode.modificationsIfAvailable": "Попытается отформатировать только модификации (требуется контроль исходного текста). Если контроль источника не может быть использован, то будет отформатирован весь файл.",
       "editor.inlayHints.enabled1": "Подсказки инкрустации отображаются по умолчанию и скрываются при нажатии `Ctrl+Alt`.",
       "editor.inlayHints.enabled2": "Подсказки инкрустации скрыты по умолчанию и отображаются при нажатии `Ctrl+Alt`.",
       "editor.quickSuggestions": "Управляет тем, должны ли предложения автоматически появляться при вводе текста. Этим можно управлять при вводе комментариев, строк и другого кода. Быстрые предложения могут быть настроены на отображение в виде призрачного текста или виджета предложений. Также обратите внимание на настройку '#editor.suggestOnTriggerCharacters#', которая определяет, будут ли появляться предложения при использовании специальных символов.",
-      "editor.stickyScroll.maxLineCount": "Определяет максимальное количество отображаемых липких линий.",
       "editor.suggest.matchOnWordStartOnly": "При включении фильтрации IntelliSense требуется, чтобы первый символ совпадал с началом слова, например, `c` в `Console` или `WebContext`, но _нет_ в `description`. При отключении IntelliSense показывает больше результатов, но все равно сортирует их по качеству совпадения.",
       "files.autoSave": "Управляет [автосохранением](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) редакторов, в которых есть несохраненные изменения.",
       "files.autoSave.afterDelay": "Редактор с изменениями автоматически сохраняется по истечении настроенной `#files.autoSaveDelay#`.",
@@ -282,6 +279,7 @@
       "hiddenChannels": "Скрытые каналы",
       "hideOutputChannel": "Скрыть выходной канал...",
       "maxChannelHistory": "Максимальное количество записей в выходном канале.",
+      "outputChannels": "Выходные каналы",
       "showOutputChannel": "Показать выходной канал..."
     },
     "plugin": {
@@ -375,7 +373,6 @@
       "profileIcon": "Идентификатор кодикона, который нужно связать с иконкой терминала.\nterminal-tmux:\"$(terminal-tmux)\"",
       "profileNew": "Новый терминал (с профилем)...",
       "profilePath": "Путь к оболочке, которую использует данный профиль.",
-      "profileSource": "Источник профиля, который будет автоматически определять пути к оболочке. Обратите внимание, что нестандартные расположения исполняемых файлов не поддерживаются и должны быть созданы вручную в новом профиле.",
       "profiles": "Профили, которые должны быть представлены при создании нового терминала. Задайте свойство path вручную с помощью необязательных args.\nУстановите для существующего профиля значение `null`, чтобы скрыть профиль из списка, например: `\"{0}\": null`.",
       "rendererType": "Управляет способом отображения терминала.",
       "selectProfile": "Выберите профиль для нового терминала",
