--- a/packages/core/i18n/nls.it.json
+++ b/packages/core/i18n/nls.it.json
@@ -72,15 +72,12 @@
       "toggleTracing": "Abilita/disabilita il tracciamento delle comunicazioni con gli adattatori di debug"
     },
     "editor": {
-      "diffEditor.diffAlgorithm.experimental": "Utilizza un algoritmo di diffing sperimentale.",
-      "diffEditor.diffAlgorithm.smart": "Utilizza l'algoritmo di differenziazione predefinito.",
       "dirtyEncoding": "Il file è sporco. Salvarlo prima di riaprirlo con un'altra codifica.",
       "editor.codeActionWidget.showHeaders": "Abilita/disabilita la visualizzazione delle intestazioni dei gruppi nel menu delle azioni del codice.",
       "editor.formatOnSaveMode.modificationsIfAvailable": "Tenterà di formattare solo le modifiche (richiede il controllo della fonte). Se il controllo della fonte non può essere usato, allora l'intero file sarà formattato.",
       "editor.inlayHints.enabled1": "I suggerimenti per l'intarsio sono visualizzati per impostazione predefinita e si nascondono quando si tiene premuto `Ctrl+Alt`.",
       "editor.inlayHints.enabled2": "I suggerimenti per l'intarsio sono nascosti per impostazione predefinita e vengono visualizzati quando si tiene premuto `Ctrl+Alt`.",
       "editor.quickSuggestions": "Controlla se i suggerimenti devono essere visualizzati automaticamente durante la digitazione. Questo può essere controllato per la digitazione di commenti, stringhe e altro codice. Il suggerimento rapido può essere configurato per essere visualizzato come testo fantasma o con il widget Suggerimento. Si tenga presente anche l'impostazione '#editor.suggestOnTriggerCharacters#', che controlla se i suggerimenti vengono attivati da caratteri speciali.",
-      "editor.stickyScroll.maxLineCount": "Definisce il numero massimo di righe appiccicose da mostrare.",
       "editor.suggest.matchOnWordStartOnly": "Se abilitato, il filtro IntelliSense richiede che il primo carattere corrisponda all'inizio di una parola, ad esempio `c` su `Console` o `WebContext` ma _non_ su `description`. Quando è disattivato, IntelliSense mostra più risultati, ma li ordina comunque in base alla qualità della corrispondenza.",
       "files.autoSave": "Controlla il [salvataggio automatico](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) degli editor che hanno modifiche non salvate.",
       "files.autoSave.afterDelay": "Un editor con modifiche viene salvato automaticamente dopo il `#files.autoSaveDelay#` configurato.",
@@ -282,6 +279,7 @@
       "hiddenChannels": "Canali nascosti",
       "hideOutputChannel": "Nascondere il canale di uscita...",
       "maxChannelHistory": "Il numero massimo di voci in un canale di uscita.",
+      "outputChannels": "Canali di uscita",
       "showOutputChannel": "Mostra il canale di uscita..."
     },
     "plugin": {
@@ -375,7 +373,6 @@
       "profileIcon": "Un ID di codifica da associare all'icona del terminale.\nterminale-tmux: \"$(terminale-tmux)\"",
       "profileNew": "Nuovo terminale (con profilo)...",
       "profilePath": "Il percorso della shell utilizzata da questo profilo.",
-      "profileSource": "Un'origine profilo che rileverà automaticamente i percorsi della shell. Si noti che i percorsi degli eseguibili non standard non sono supportati e devono essere creati manualmente in un nuovo profilo.",
       "profiles": "I profili da presentare quando si crea un nuovo terminale. Impostare manualmente la proprietà path con gli argomenti opzionali.\nImpostare un profilo esistente a `null` per nasconderlo dall'elenco, ad esempio: `\"{0}\": null`.",
       "rendererType": "Controlla il modo in cui il terminale viene reso.",
       "selectProfile": "Selezionare un profilo per il nuovo terminale",
