--- a/packages/core/i18n/nls.json
+++ b/packages/core/i18n/nls.json
@@ -72,15 +72,12 @@
       "toggleTracing": "Enable/disable tracing communications with debug adapters"
     },
     "editor": {
-      "diffEditor.diffAlgorithm.experimental": "Uses an experimental diffing algorithm.",
-      "diffEditor.diffAlgorithm.smart": "Uses the default diffing algorithm.",
       "dirtyEncoding": "The file is dirty. Please save it first before reopening it with another encoding.",
       "editor.codeActionWidget.showHeaders": "Enable/disable showing group headers in the code action menu.",
       "editor.formatOnSaveMode.modificationsIfAvailable": "Will attempt to format modifications only (requires source control). If source control can't be used, then the whole file will be formatted.",
       "editor.inlayHints.enabled1": "Inlay hints are showing by default and hide when holding Ctrl+Alt",
       "editor.inlayHints.enabled2": "Inlay hints are hidden by default and show when holding Ctrl+Alt",
       "editor.quickSuggestions": "Controls whether suggestions should automatically show up while typing. This can be controlled for typing in comments, strings, and other code. Quick suggestion can be configured to show as ghost text or with the suggest widget. Also be aware of the '#editor.suggestOnTriggerCharacters#'-setting which controls if suggestions are triggered by special characters.",
-      "editor.stickyScroll.maxLineCount": "Defines the maximum number of sticky lines to show.",
       "editor.suggest.matchOnWordStartOnly": "When enabled IntelliSense filtering requires that the first character matches on a word start, e.g `c` on `Console` or `WebContext` but _not_ on `description`. When disabled IntelliSense will show more results but still sorts them by match quality.",
       "files.autoSave": "Controls [auto save](https://code.visualstudio.com/docs/editor/codebasics#_save-auto-save) of editors that have unsaved changes.",
       "files.autoSave.afterDelay": "An editor with changes is automatically saved after the configured `#files.autoSaveDelay#`.",
@@ -282,6 +279,7 @@
       "hiddenChannels": "Hidden Channels",
       "hideOutputChannel": "Hide Output Channel...",
       "maxChannelHistory": "The maximum number of entries in an output channel.",
+      "outputChannels": "Output Channels",
       "showOutputChannel": "Show Output Channel..."
     },
     "plugin": {
@@ -375,7 +373,6 @@
       "profileIcon": "A codicon ID to associate with the terminal icon.\nterminal-tmux:\"$(terminal-tmux)\"",
       "profileNew": "New Terminal (With Profile)...",
       "profilePath": "The path of the shell that this profile uses.",
-      "profileSource": "A profile source that will auto detect the paths to the shell. Note that non-standard executable locations are not supported and must be created manually in a new profile.",
       "profiles": "The profiles to present when creating a new terminal. Set the path property manually with optional args.\nSet an existing profile to `null` to hide the profile from the list, for example: `\"{0}\": null`.",
       "rendererType": "Controls how the terminal is rendered.",
       "selectProfile": "Select a profile for the new terminal",
